deploy.yaml

apiVersion: apps/v1
kind: Deployment
metadata:
  name: reactjs-dpl
spec:
  selector:
    matchLabels:
      app: reactjs-app
  template:
    metadata:
      labels:
        app: reactjs-app
    spec:
      containers:
      - name: reactjs-app
        image: 69966/earthdx:78
        ports:
        - containerPort: 80
