service.yaml

apiVersion: v1
kind: Service
metadata:
  name: reactjs-svc
spec:
  selector:
    app: reactjs-app
  ports:
  - port: 80
    targetPort: 80
